--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>제목</title>
+    <title>황혜진의 포트폴리오</title>
 
     <script src="js/html5shiv.js"></script>
-    <script src="js/prefixfree.min.js"></script>
+    <!-- <script src="js/prefixfree.min.js"></script> -->
 
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style.css">
@@ -14,13 +14,42 @@
 </head>
 <body>
     <header class="header">
+        <div class="inner">
+            <div class="logo">
+                <a href="#"><img src="img/메론소다-로고 1.png" alt=""></a>
+            </div>
+            <ul>
+                <li class="active"><a href="#home">home</a></li>
+                <li><a href="#about">about</a></li>
+                <li><a href="#portfolio">portfolio</a></li>
+                <li><a href="#contact">contack</a></li>
+            </ul>
 
+        </div>
     </header>
-    <section class="main-visual">
+    <section class="home" id = "home">
+        <div class="inner">
+            <div class="top-circle"></div>
+            <div class="btm-circle"></div>
+            <h1>hyejin <br> portfolio</h1>
 
+        </div>
     </section>
-    <footer class="footer">
-        
-    </footer>
+    <section class="about" id = "about">
+        <div class="inner">
+
+        </div>
+    </section>
+    <section class="portfolio" id = "portfolio">
+        <div class="inner">
+
+        </div>
+    </section>
+    <section class="contack" id = "contack">
+        <div class="inner">
+
+        </div>
+    </section>
+   
 </body>
 </html>
